--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/query-sync-storage-persister": "^4.14.3",
+    "@tanstack/react-query": "^4.14.3",
+    "@tanstack/react-query-devtools": "^4.14.3",
+    "@tanstack/react-query-persist-client": "^4.14.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1"
   }
 }
